my friends  page fix

--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -360,33 +360,16 @@
                     <article>
                         <h2 class="textCenter h2 mb-middle">
                             <strong>
-                            Get the gang together again, in a LIVE online coding class!    
+                                Take It to The Next Level, with LIVE Private Online Coding Classes!
                             </strong>
                             
                         </h2>    
                         <p> 
-                            Uncertainty is the norm, these days. But, as parents, we are persevering and putting in place new educational pathways to help to offset the impact on our children. CodeAdvantage is a great fit for your child's learning journey because even amidst the shifting environment, we are very certain of two things:
-                        </p>
-                        <ol class="listNum mb-middle">
-                            <li>
-                                <p>Children love spending time with their friends. </p>
-                            </li>
-                            <li>
-                                <p>Friends love learning together. </p>
-                            </li>
-                        </ol>
-                        <h5 class="h5">
-                            Learning pod? Remote Schooling? Homeschooling? Or, maybe a hybrid? We've got you covered!
-                        </h5>
-                        <p>
-                            Whatever your education plan looks like, this year, 
-                            My Friends Online LIVE coding classes can help to satisfy your 
-                            child's needs for personal connection, enrichment, and growth. 
-                            My Friends Online allows you to curate an online learning pod with your child and his or her group of friends. 
-                            <strong>
-                            You pick the learners, class, day, time, and frequency. We provide the Rockstar Instructor, 
-                            an exciting project-based coding curriculum, and the fun!
-                            </strong>
+                            Sometimes we want to give our child a boost—really nurture a blossoming 
+                            interest or skill. But, we live in a constrained world, right now, and our 
+                            options are limited. With our online coding tutoring, your child is our 
+                            number one priority. Instruction style, content, and activities are all 
+                            geared to make them light up and dig in to the exciting world of code.
                         </p>
                     </article>
                 </div>
@@ -396,30 +379,59 @@
         <section>
             <div class="container">
                 <div class="rows">
-                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
-                </div>
-                <div class="rows">
                     <article>
-                        <h4 class="h4">
-                            <i>My Friends</i>
-                             Online will check the box on most of your goals for extracurricular activities and enrichment.
-                        </h4>
+                        <p>
+                            Whatever your learning plan looks like, this year—remote schooling, 
+                            learning pod, homeschooling, or perhaps a hybrid—our private online coding 
+                            classes can help satisfy your 6-13 year old's need for engagement, 
+                            enrichment, and growth. 
+                            <strong>
+                            You pick the days and times that fit best with your 
+                            schedule, we provide the LIVE Rockstar Instructor, an exciting project-based 
+                            coding curriculum, and the FUN!                                
+                            </strong>
+                        </p>
+                        <h3 class="h3">
+                            Why choose private online coding classes?
+                        </h3>
+                        <p>
+                            <strong>
+                                Our instructors wish they had this experience when they were kids!
+                            </strong>
+                        </p>
                         <ul class="listCheck mb-middle">
                             <li>
-                                <p>Supplement your child’s education with critical STEM/Coding skills not often taught in schools. </p>
+                                <p>
+                                    Enrich your child’s education with critical STEM/Coding skills not often taught in schools.
+                                </p>
                             </li>
                             <li>
-                                <p>Find flexible online coding classes that work your family’s schedule whether you child is remote schooling, in a learning pod, or homeschooling.</p>
+                                <p>
+                                    Give your child the benefits of coding instruction that is customized by interest, grade level, and coding experience. 
+                                </p>
                             </li>
                             <li>
-                                <p>Have fun with friends while learning from talented, experienced, and engaging LIVE instructors</p>
+                                <p>
+                                    See pace and progress [and enthusiasm!] accelerate with exclusive attention.
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Satisfy ALL their coding instruction interests—Scratch, Minecraft, Roblox, 3D Video Game Design, Robotics, Python Instruction, and more!
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Enjoy instruction that is tailored to your child.
+
+                                </p>
                             </li>
                         </ul>
                         <h4 class="h4">
-                            Pricing for My Friends Online
+                            Pricing & Registration for Private and Semi-Private Classes
                         </h4>
                         <p>
-                            When you build a class with seven learners, our My Friends Online offering is only a couple dollars more per hour than our scheduled class offerings. The total cost for ten hours of small group instruction is $1,715, and the cost is split among the learners in the online learning pod. Here's how that cost breaks down per learner with 7, 6, and 5 total learners in the coding supplement class.
+                            Private online coding classes can run with one or two learners and are purchased in packages of ten hours. 
                         </p>
                         <div class="blockPriceWrapper textCenter">
                             <p>
@@ -429,36 +441,29 @@
                             </p>
                             <div class="blockPrice">
                                 <div class="blockPrice__item">
-                                    <p class="count">7</p>
-                                    <p>LEARNERS</p>
+                                    <p class="count">1:1</p>
+                                    <p>INSTRUCTION</p>
                                     <p class="price">
-                                        $24.50/hour 
-                                    </p>
-                                    <p class="price">
-                                        <strong>$245/total</strong>
-                                    </p>
-                                </div>
-                                <div class="blockPrice__item">
-                                    <p class="count">6</p>
-                                    <p>LEARNERS</p>
-                                    <p class="price">
-                                        $28.60/hour 
+                                        $59.50/hour 
                                     </p>
                                     <p class="price">
                                         <strong>
-                                            $286/total
+                                            $595 total
                                         </strong>
                                     </p>
                                 </div>
                                 <div class="blockPrice__item">
-                                    <p class="count">5</p>
-                                    <p>LEARNERS</p>
+                                    <p class="count">2:1</p>
+                                    <p>INSTRUCTION</p>
                                     <p class="price">
-                                        $28.60/hour 
+                                        $39.50/hour per learner 
+                                    </p>
+                                    <p class="price">
+                                        $395 total per learner  
                                     </p>
                                     <p class="price">
                                         <strong>
-                                            $343/total
+                                            $790 total for both learners
                                         </strong>
                                     </p>
                                 </div>
@@ -466,19 +471,13 @@
                             <div class="blockPriceLine">
                                 <p>
                                     <strong>
-                                        10 Hours of Instruction
+                                        10 Hours of Coding Instruction
                                     </strong>
                                 </p>
                             </div>
                         </div>
-                        <p class="mb-middle">
-                            <strong>Note: </strong>
-                            In appreciation of the parent organizer of the My Friends online learning pod, we offer a "thank you" discount. Details will be made available upon registration.  
-                        </p>
                         <h4 class="h4">
-                            <a href="#" style="text-decoration: none;">
-                                Find Classes to Fit your Child’s Grade Level
-                            </a>
+                            Explore the options for online coding tutoring! From Scratch Jr. to Python instruction, we span the coding journey.
                         </h4>
                         <p>
                             Our coding instruction spans 6th through 8th grade. Click on the red, blue, and yellow blocks, below, to get an overview on the types of coding instruction available. 
@@ -529,6 +528,16 @@
                                 </p>
                             </div>
                         </div> 
+                        <h4 class="h4 textCenter">
+                            <a href="#">
+                                Click Here to Sign Up for Private Online Classes
+                            </a>
+                        </h4>
+                        <p>
+                            The link will bring you to an online form where you can submit your details 
+                            and scheduling preferences. Our customer service team will reply 
+                            with instructor availability and answer any questions. 
+                        </p>
                     </article>
                     <aside>
                         <div class="sideBanner">
@@ -556,11 +565,11 @@
                                         </p>
                                     </li>
                                     <li>
-                                        <p> Digital badging.</p>
+                                        <p> Digital badging. </p>
                                     </li>
                                     <li>
                                         <p>
-                                          Class time text reminders!  
+                                            Tutoring time text reminders!
                                         </p>
                                     </li>
                                 </ul>
