--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -624,19 +624,21 @@
         <section>
             <div class="container">
                 <div class="rows">
-                    <h4 class="h4 textCenter">
-                        <a href="#">
-                            Click Here to Sign Up for Private Online Classes
-                        </a>
-                    </h4>
-                    <p>
-                        The link will bring you to an online form where you can submit your details 
-                        and scheduling preferences. Our customer service team will reply 
-                        with instructor availability and answer any questions. 
-                    </p>
+                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
                 <div class="rows">
-                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <article>
+                        <h4 class="h4 textCenter">
+                            <a href="#">
+                                Click Here to Sign Up for Private Online Classes
+                            </a>
+                        </h4>
+                        <p>
+                            The link will bring you to an online form where you can submit your details 
+                            and scheduling preferences. Our customer service team will reply 
+                            with instructor availability and answer any questions. 
+                        </p>                        
+                    </article>
                 </div>
             </div>
         </section>
