--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1435,6 +1435,7 @@ aside {
   }
   .blockPriceWrapper .blockPrice .blockPrice__item{
     padding: 20px 35px 35px;
+    width: 100%;
   }
   .blockStepWrapper .blockPrice .blockPrice__item{
     padding: 20px 35px;
