my friends  page fix

--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -433,7 +433,7 @@
                         <p>
                             Private online coding classes can run with one or two learners and are purchased in packages of ten hours. 
                         </p>
-                        <div class="blockPriceWrapper textCenter">
+                        <div class="blockStepWrapper textCenter">
                             <p>
                                 <strong>
                                     Pricing Per Learner with Different Class Sizes 
