my friends  page fix

--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -433,10 +433,10 @@
                         <p>
                             Private online coding classes can run with one or two learners and are purchased in packages of ten hours. 
                         </p>
-                        <div class="blockStepWrapper textCenter">
+                        <div class="blockStepWrapper textCenter mb-middle">
                             <p>
                                 <strong>
-                                    Pricing Per Learner with Different Class Sizes 
+                                    Private and Semi-Private Class Pricing <br> One or Two Learners 
                                 </strong>
                             </p>
                             <div class="blockPrice">
