--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -433,7 +433,9 @@
                         <p>
                             Private online coding classes can run with one or two learners and are purchased in packages of ten hours. 
                         </p>
-                        <div class="blockStepWrapper textCenter mb-middle">
+                        <div class="blockStepWrapper textCenter mb-middle"
+                            style="margin: 20px 0 60px;"
+                        >
                             <p>
                                 <strong>
                                     Private and Semi-Private Class Pricing <br> One or Two Learners 
@@ -629,7 +631,7 @@
                 <div class="rows">
                     <article>
                         <h4 class="h4 textCenter">
-                            <a href="#">
+                            <a href="#" class="orangeText">
                                 Click Here to Sign Up for Private Online Classes
                             </a>
                         </h4>
@@ -718,7 +720,7 @@
         <div class="theme-main theme-layout-25x25x25x25">
             <div id="text-31" class="widget_text theme-clear-fix theme-widget theme-layout-column-left">			<div class="textwidget"><div style="color: white; font-size: 80%;">Phone: 833.210.CODE<br />
                         Email: office@codeadvantage.org<br>Copyright © 2015-2020<br />CodeAdvantage®<br />
-                        <a style="font-size: 100%;" href="/private-classes">Private Classes</a><br />
+                        <a style="font-size: 100%;" href="/private-classes">After School</a><br />
                         <a style="font-size: 100%;" href="/contact">Contact us</a><br />
                         <br />
                         <a href="https://www.facebook.com/codeadvantage.org" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/CA/uploads/facebook.png" alt="facebook" width="32" height="32" /></a>
