--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1110,7 +1110,6 @@ aside {
 
 .pressBlock a{
   margin: 0 20px;
-  transition: background-color 1s linear;
 }
 
 .pressBlock a img{
@@ -1296,6 +1295,11 @@ aside {
 .socLinksBlock img {
   width: 60px;
   margin: 0 5px;
+}
+
+.socLinksBlock img:hover{
+  filter: brightness(120%);
+
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, .h1 a, .h2 a, .h3 a, .h4 a, .h5 a, .h6 a{
