--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -603,9 +603,7 @@
                         </div>
                         <div class="sideBanner">
                             <div class="sideBanner__up">
-                                <a class="vp-a" href="https://www.youtube.com/watch?v=YVH1QVftvpo">
-                                    <img class="vp-img" src="/CA/uploads/vc-play3.png"  alt="CA Online Classes">
-                                </a>
+                                <img class="vp-img" src="/CA/uploads/girl_600x423.jpg"  alt="CA Online Classes">
                             </div>
                             <div class="sideBanner__down textCenter">
                                 <form action="" id="onlineEmail">
