--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -434,7 +434,7 @@
                             Private online coding classes can run with one or two learners and are purchased in packages of ten hours. 
                         </p>
                         <div class="blockStepWrapper textCenter mb-middle"
-                            style="margin: 20px 0 60px;"
+                            style="padding: 0 0 60px;"
                         >
                             <p>
                                 <strong>
@@ -604,9 +604,7 @@
                         </div>
                         <div class="sideBanner">
                             <div class="sideBanner__up">
-                                <a class="vp-a" href="https://www.youtube.com/watch?v=YVH1QVftvpo">
-                                    <img class="vp-img" src="/CA/uploads/vc-play3.png"  alt="CA Online Classes">
-                                </a>
+                                <img class="vp-img" src="/CA/uploads/girl02_600x423.jpg"  alt="CA Online Classes">
                             </div>
                             <div class="sideBanner__down textCenter">
                                 <form action="" id="onlineEmail">
@@ -699,19 +697,6 @@
             </div>
         </section>
     </div>
-    <!-- <script>
-        jQuery(document).ready(function($){
-            $('.face2').each(function () {
-                 $(this).hide();
-             });
-             $(".cardProgress").click(function(){
-                 $(this).find('.face2').animate({
-                         height: "toggle"
-                     }, 500, function() {
-                 });
-             })
-         });
-    </script> -->
 </div>
 
 <div class="theme-footer theme-clear-fix">
