my friends  page fix

--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -379,7 +379,7 @@
         <section>
             <div class="container">
                 <div class="rows">
-                    <article>
+                    <article style="padding: 0;">
                         <p>
                             Whatever your learning plan looks like, this year—remote schooling, 
                             learning pod, homeschooling, or perhaps a hybrid—our private online coding 
@@ -531,7 +531,7 @@
                             </div>
                         </div> 
                     </article>
-                    <aside>
+                    <aside style="padding: 0 0 0 25px;">
                         <div class="sideBanner">
                             <div class="sideBanner__down bgOrange">
                                 <h5 class="h5">
