--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -342,7 +342,8 @@
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h1>Me and My Friends</h1>
+                        <h1>"I got it! What's next?"
+                        </h1>
                     </article>
                 </div>
             </div>
