--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -338,7 +338,7 @@
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
         <section class="sectionheader"  style="
-        background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;padding:60px 0;">
+        background-image:url(/CA/uploads/private-classes-header.jpg); background-position: center,0 33%; background-size: auto, cover;padding:60px 0;">
             <div class="container">
                 <div class="rows">
                     <article>
