my friends  page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -379,10 +379,9 @@
                             In this time of education uncertainty, CodeAdvantage provides a vibrant learning path where children look forward to their classes, opt into extra enrichment activities, and create exciting new things with code!
                         </p>
                         <p>
-                            Through LIVE online instruction and a project-based curriculum, our learners have fun, connect, and grow. And, with choices for small group and private online classes, CodeAdvantage can fit into what ever learning path you have chosen this year—remote schooling, learning pods, homeschooling, or even a hybrid approach.                         </p>
-                        <p>
-                            Our classes start at $165 for ten hours of instruction, and we have made it a customer service priority to make scheduling easy on you.
+                            Through LIVE online instruction and a project-based curriculum, our learners have fun, connect, and grow. And, with choices for small group and private online classes, CodeAdvantage can fit into what ever learning path you have chosen this year—remote schooling, learning pods, homeschooling, or even a hybrid approach.                         
                         </p>
+
 
                         <div class="warningText textCenter">
                             <p>
