my friends  page fix

--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1381,6 +1381,11 @@ aside {
     font-size: 1.25rem;
   }
 
+  #onlinePageHeader .btn:hover {
+    background-color: rgba(95, 95, 95, 0.9);
+
+  }
+
   .callToAction{
     display: flex;
     justify-content: space-between;
