--- a/css/style7.css
+++ b/css/style7.css
@@ -4424,6 +4424,10 @@ aside {
   font-size: 1.25rem;
 }
 
+#onlinePageHeader .btn:hover {
+  background-color: rgba(95, 95, 95, 0.9);
+}
+
 .callToAction {
   display: -webkit-box;
   display: -ms-flexbox;
