my friends  page fix

--- a/templates/page/onlinerobobotics.html
+++ b/templates/page/onlinerobobotics.html
@@ -362,12 +362,12 @@
                 <div class="rows">
                     <article>
                         <h3 class="h3">Robotics Online Classes</h3>
+                        <h5 class="h5">Grades: 3rd-5th</h5>
+                        <h5 class="h5">Ages: 8-10*, 10-13*</h5>                        
                         <p>
                             <strong>Note: </strong>
                             Since these robotics classes require a Lego WEDO 2.0 kit, we can ONLY schedule these classes as <a href="#">My Friends Online</a>  or <a href="#">1:1 tutoring sessions</a>.
                         </p>
-                        <h5 class="h5">Grades: 3rd-5th</h5>
-                        <h5 class="h5">Ages: 8-10*, 10-13*</h5>
                         <p> <strong> Required for class: Computer (desktop or laptop) and you MUST use a Lego WEDO 2.0 kit</strong></p>
                         <p>We’ve seen them in movies, read about them in books, incorporated them in industry, and now even find them as toys. Robots are quickly becoming a huge part of everyday life and we now need to learn how to work with and create these machines.</p>
                         <p>These junior robotics courses will teach children valuable concepts in engineering and physics, allow them to experiment with their ideas, expose them to the process of designing a product to complete a specific job, and show them that many times there is more than one correct solution to the same problem.</p>
@@ -416,6 +416,15 @@
                                 </div>
                                 <script src="https://player.vimeo.com/api/player.js"></script>
                             </div>
+                            <div class="sideBanner__down">
+                                <form action="" id="onlineEmail">
+                                    <p>
+                                        For news & special offers, subscribe to our mailing list!
+                                    </p>
+                                    <input type="text" placeholder="email address" name="email" required>
+                                    <input type="submit" class="btn" value="SUBSCRIBE" >
+                                </form>
+                            </div>
                         </div>
                     </aside>
                 </div>
@@ -429,7 +438,7 @@
                 </div>
                 <div class="rows">
                     <article>
-                        <h3 class="h3">For 3rd-5th graders:</h3>
+                        <h3 class="h3 mb-middle">For 3rd-5th graders:</h3>
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
                                 <img src="/CA/uploads/Rebecca-Mancini.jpg" alt="Rebecca Mancini"/>
@@ -458,7 +467,7 @@
                             </div>
                         </div> 
 
-                        <h3 class="h3">For 6th-8th graders:</h3>
+                        <h3 class="h3 mb-middle">For 6th-8th graders:</h3>
 
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
