--- a/templates/page/onlinerobobotics.html
+++ b/templates/page/onlinerobobotics.html
@@ -338,7 +338,7 @@
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
         <section class="sectionheader"  style="
-        background-image:url(/CA/uploads/private-classes-header.jpg); background-position: 60% 36%; background-size: auto, cover;padding:60px 0;">
+        background-image:url(/CA/uploads/Robitics-sv1.jpg); background-position: 60% 36%; background-size: auto, cover;padding:60px 0;">
             <div class="container">
                 <div class="rows">
                     <article>
@@ -441,7 +441,7 @@
                         <h3 class="h3 mb-middle">For 3rd-5th graders:</h3>
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
-                                <img src="/CA/uploads/Rebecca-Mancini.jpg" alt="Rebecca Mancini"/>
+                                <img src="/CA/uploads/robotics-earthbots-600-1.jpg" alt="Earthbot Engineers"/>
                             </div>
                             <div class="textWithImgBlock__text">
                                 <h4 class="h4">Earthbot Engineers</h4>
@@ -453,7 +453,7 @@
 
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
-                                <img src="/CA/uploads/Rebecca-Mancini.jpg" alt="Rebecca Mancini"/>
+                                <img src="/CA/uploads/robotics-anibots-600.jpg" alt="Robo Zoo – Anibots"/>
                             </div>
                             <div class="textWithImgBlock__text">
                                 <h4 class="h4">Robo Zoo – Anibots</h4>
@@ -471,7 +471,7 @@
 
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
-                                <img src="/CA/uploads/Rebecca-Mancini.jpg" alt="Rebecca Mancini"/>
+                                <img src="/CA/uploads/Robotics.png" alt="Flying Spacebots"/>
                             </div>
                             <div class="textWithImgBlock__text">
                                 <h4 class="h4">Flying Spacebots</h4>
@@ -482,7 +482,7 @@
 
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
-                                <img src="/CA/uploads/Rebecca-Mancini.jpg" alt="Rebecca Mancini"/>
+                                <img src="/CA/uploads/robotics-engineering-600-1.jpg" alt="Extreme Robot Engineering"/>
                             </div>
                             <div class="textWithImgBlock__text">
                                 <h4 class="h4">Extreme Robot Engineering</h4>
