robotics  page fix

--- a/templates/page/onlinerobobotics.html
+++ b/templates/page/onlinerobobotics.html
@@ -363,14 +363,21 @@
                     <article>
                         <h3 class="h3">Robotics Online Classes</h3>
                         <h5 class="h5">Grades: 3rd-5th</h5>
-                        <h5 class="h5">Ages: 8-10*, 10-13*</h5>                        
+                        <h5 class="h5 mb-middle">Ages: 8-10*, 10-13*</h5>                        
                         <p>
                             <strong>Note: </strong>
-                            Since these robotics classes require a Lego WEDO 2.0 kit, we can ONLY schedule these classes as <a href="#">My Friends Online</a>  or <a href="#">1:1 tutoring sessions</a>.
+                            Since these robotics classes require a Lego WEDO 2.0 kit, we can ONLY schedule these classes 
+                            as <a href="#">My Friends Online</a>  or <a href="#">1:1 tutoring sessions</a>.
                         </p>
-                        <p> <strong> Required for class: Computer (desktop or laptop) and you MUST use a Lego WEDO 2.0 kit</strong></p>
+                        <p> <strong> Required for class: Computer (desktop or laptop) and you MUST
+                             use a 
+                             <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                            </strong></p>
                         <p>We’ve seen them in movies, read about them in books, incorporated them in industry, and now even find them as toys. Robots are quickly becoming a huge part of everyday life and we now need to learn how to work with and create these machines.</p>
-                        <p>These junior robotics courses will teach children valuable concepts in engineering and physics, allow them to experiment with their ideas, expose them to the process of designing a product to complete a specific job, and show them that many times there is more than one correct solution to the same problem.</p>
+                        <p>These junior robotics courses will teach children valuable concepts in engineering and physics,
+                             allow them to experiment with their ideas, expose them to the process of designing a product 
+                             to complete a specific job, and show them that many times there is more than one correct
+                              solution to the same problem.</p>
                         <p>
                             While working in design teams, students will take on roles of different engineers. Together they will build and program their robot to conquer the challenge given.
                         </p>
@@ -498,6 +505,59 @@
             </div>
         </section>
 
+        <section>  
+            <div class="container">
+                <div class="rows">
+                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                </div>
+                <div class="rows">
+                    <article>
+                        <h2 class="h2 textCenter">
+                            CodeAdvantage featured in the press:
+                        </h2>
+                        <div class="pressBlock">
+                            <a href="https://www8.gsb.columbia.edu/articles/columbia-business/coding-classes-kids-mark-shift-educational-priorities" title="Writing the Code for Success" target="_blank">
+                                <img class="alignnone size-medium wp-image-2130" src="/CA/uploads/ColumbiaUniversity-1-150x300.png" alt="Columbia University" width="200" height="100" />
+                            </a>
+                            <a href="https://www.timeout.com/new-york-kids/things-to-do/codeadvantage" target="_blank" title="CodeAdvantage in Time Out">
+                                <img class="alignnone size-medium wp-image-2137" src="/CA/uploads/Times-Out-1-300x300.png" alt="Time Out New York" width="100" height="100" />
+                            </a>
+                            <a href="https://vimeo.com/237738680" title="CodeAdvantage Makes Coding Accessible for Kids" target="_blank">
+                                <img class="alignnone size-medium wp-image-2136" src="/CA/uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
+                            </a>
+                            <a href="https://mommypoppins.com/new-york-city-kids/directory/virtual/codeadvantage" title="CodeAdvantage on MommyPoppins" target="_blank">
+                                <img class="alignnone size-medium wp-image-2133" src="/CA/uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
+                            </a>
+                        </div>
+                    </article>
+                </div>
+                <div class="rows">
+                    <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="rows textCenter">
+                    <article>
+                        <h2 class="h2">Follow us on:
+                        </h2>
+                        <div class="socLinksBlock">
+                            <div>
+                                <a href="https://www.facebook.com/codeadvantage.org" title="CodeAdvantage on Facebook" target="_blank">
+                                    <img  alt="facebook" src="/CA/uploads/facebook.png">
+                                </a>
+                            </div>
+                            <div>
+                                <a href="https://www.instagram.com/codeadvantage" title="CodeAdvantage on Instagram" target="_blank">
+                                    <img src="/CA/uploads/inst_200x200.png" alt="instagram">
+                                </a>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
     </div>
 </div>
 
