robotics  page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -5639,16 +5639,16 @@
 </div>
 
 <div class="theme-footer theme-clear-fix">
-    <div class="theme-footer-top theme-clear-fix" style="background-image:url('/uploads/Untitled-2.png');background-repeat:no-repeat;background-position:bottom;background-size:contain;">
+    <div class="theme-footer-top theme-clear-fix" style="background-image:url('/CA/uploads/Untitled-2.png');background-repeat:no-repeat;background-position:bottom;background-size:contain;">
 
         <div class="theme-main theme-layout-25x25x25x25">
             <div id="text-31" class="widget_text theme-clear-fix theme-widget theme-layout-column-left">			<div class="textwidget"><div style="color: white; font-size: 80%;">Phone: 833.210.CODE<br />
                         Email: office@codeadvantage.org<br>Copyright © 2015-2020<br />CodeAdvantage®<br />
-                        <a style="font-size: 100%;" href="/private-classes">After School</a><br />
+                        <a style="font-size: 100%;" href="/private-classes">Private Classes</a><br />
                         <a style="font-size: 100%;" href="/contact">Contact us</a><br />
                         <br />
-                        <a href="https://www.facebook.com/codeadvantage.org" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/uploads/facebook.png" alt="facebook" width="32" height="32" /></a>
-                        <a href="https://www.instagram.com/codeadvantage" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/uploads/inst.png" alt="instagram" width="32"  height="32" /></a>
+                        <a href="https://www.facebook.com/codeadvantage.org" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/CA/uploads/facebook.png" alt="facebook" width="32" height="32" /></a>
+                        <a href="https://www.instagram.com/codeadvantage" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/CA/uploads/inst.png" alt="instagram" width="32"  height="32" /></a>
 
                     </div>
                 </div>
@@ -5712,48 +5712,11 @@
 <script type='text/javascript' src='/CA/js/plugins9.js'></script>
 <script type='text/javascript' src='/CA/js/theme.js'></script>
 
-    <script type='text/javascript' src='/CA/js/media.js?v=10'></script>
+    <script type='text/javascript' src='/CA/js/media.js'></script>
     <script type='text/javascript' src='/CA/js/moment.min.js'></script>
     <script type='text/javascript' src='/CA/js/moment-timezone-with-data-10-year-range.min.js'></script>
     <script type='text/javascript' src='/CA/js/sweetalert2.9.js'></script>
     <script type='text/javascript' src='/CA/js/schedule.js'></script>
-<!-- Code injected by live-server -->
-<script type="text/javascript">
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script></body>
+</body>
 
 </html>
