--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -567,7 +567,7 @@
         <div class="theme-main theme-layout-25x25x25x25">
             <div id="text-31" class="widget_text theme-clear-fix theme-widget theme-layout-column-left">			<div class="textwidget"><div style="color: white; font-size: 80%;">Phone: 833.210.CODE<br />
                         Email: office@codeadvantage.org<br>Copyright © 2015-2020<br />CodeAdvantage®<br />
-                        <a style="font-size: 100%;" href="/private-classes">After School</a><br />
+                        <a style="font-size: 100%;" href="/private-classes">Private Classes</a><br />
                         <a style="font-size: 100%;" href="/contact">Contact us</a><br />
                         <br />
                         <a href="https://www.facebook.com/codeadvantage.org" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/CA/uploads/facebook.png" alt="facebook" width="32" height="32" /></a>
